<resources>
    <string name="app_name">Countdown-timer</string>
    <string name="time_label">Sec time left</string>
    <string name="initial_timer_values">00</string>
    <string name="more_time_label">+15sec</string>
    <string name="start_button_text">Start</string>
    <string name="description_more_time_button">Add 15sec to countdown timer</string>
    <string name="description_button_add_time">Add time to countdown timer</string>
    <string name="pause_button_text">Pause</string>
    <string name="resume_button_text">Resume</string>
    <string name="max_time_value">9999</string>
</resources>