<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/flTimer"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232">

        <ProgressBar
            android:id="@+id/pbTimer"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/gray_progressbar_background"
            android:indeterminate="false"
            android:max="10"
            android:progress="10"
            android:progressDrawable="@drawable/blue_progressbar_background"
            android:rotation="90"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTimeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_timer_values"
                android:textColor="@color/max_blue"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.441" />

            <TextView
                android:id="@+id/tvTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_label"
                android:textColor="@color/max_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTimeLeft" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flTimer"
        android:contentDescription="@string/description_button_add_time" />

    <TextView
        android:id="@+id/tvMoreTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="160dp"
        android:text="@string/more_time_label"
        android:textColor="@color/max_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnMoreTime"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="160dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_more_time_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/start_button_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>